[package]
name = "microblog"
version = "0.1.0"
authors = ["Elliot Snow-Kropla <esnowkropla@gmail.com>"]

[dependencies]
iron = "*"
staticfile = "*"
mount = "*"
router = "*"
iron-sessionstorage = "*"
persistent = "*"
urlencoded = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.handlebars-iron]
version = "*"
features = ["watch"]

[dependencies.rusqlite]
version = "*"
features = ["bundled"]